edit informational section with css now you can see 4 pics and descritpion layed out as on the ref

--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@ img {
     width: 400px;
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #f9faf8;
+}
+
 .header, .hero-section, .footer {
     background-color: #1F2937;
     color: #f9faf8;
@@ -26,17 +37,6 @@ img {
     font-size: 24px;
     font-weight: 900;
     justify-content: space-between;
-}
-
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    color: #f9faf8;
 }
 
 .menu {
@@ -68,7 +68,31 @@ a {
     border-radius: 10px;
 }
 
-
 .content {
     flex: 1;
+}
+
+.info-title {
+    padding: 40px 0;
+    text-align: center;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+}
+
+.info-container {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    padding-bottom: 60px;
+}
+
+.info-container img {
+    width: 120px;
+}
+
+.card {
+    flex-basis: 15%;
+    text-align: center;
+    font-size: 18px;
 }
