--- a/style.css
+++ b/style.css
@@ -96,3 +96,20 @@ a {
     text-align: center;
     font-size: 18px;
 }
+
+.quote {
+    padding: 100px 250px;
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    
+}
+
+.author {
+    font-size: 27px;
+    font-weight: bold;
+    font-style: normal;
+    text-align: right;
+}
