--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Roboto;
+    font-family: Fugaz One;
     display: flex;
     flex-direction: column;
 }
@@ -20,7 +20,7 @@ a {
 }
 
 .header, .hero-section, .footer {
-    background-color: #1F2937;
+    background-color: #ff7ac3;
     color: #f9faf8;
     display: flex;
     
@@ -48,7 +48,7 @@ a {
 .menu, .hero-subtext, .hero-button, .cta-button {
     font-size: 18px;
     font-weight: 1;
-    color: #e5e7eb
+    color: #ffffff
 }
 
 .hero-pitch {
@@ -58,12 +58,17 @@ a {
 }
 
 .hero-text {
-    font-size: 48px;
     font-weight: 900;
+    font-size: 48px;
+}
+
+.hero-subtext {
+    font-family: Fugaz One;
 }
 
 .hero-button {  
-    background-color: #3882F6;
+    background-color: #ffffff;
+    color: #ff7ac3;
     padding: 5px 30px;
     border-radius: 7px;
     border: 0;
@@ -73,11 +78,12 @@ a {
     flex: 1;
 }
 
+
 .info-title {
     padding: 40px 0;
     text-align: center;
     font-size: 36px;
-    color: #1f2937;
+    color: #2a173a;
     font-weight: 900;
 }
 
@@ -89,7 +95,7 @@ a {
 }
 
 .info-container img {
-    width: 120px;
+    width: 200px;
 }
 
 .card {
@@ -100,8 +106,8 @@ a {
 
 .quote {
     padding: 100px 250px;
-    background-color: #e5e7eb;
-    color: #1f2937;
+    background-color: #fff0f6;
+    color: #2b1b38;
     font-size: 36px;
     font-weight: 300;
     font-style: italic;
@@ -118,8 +124,8 @@ a {
 .box {
     margin: 100px 170px;
     padding: 50px 70px;
-    background-color: #3882f6;
-    color: #e5e7eb;
+    background-color: #ff7ac3;
+    color: #fff6fe;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -131,10 +137,11 @@ a {
 }
 
 .cta-button {
-    background-color: #3882f6;
-    border: 2px solid #e5e7eb;
+    background-color: #ff7ac3;
+    border: 2px solid #fff6fe;
     padding: 5px 30px;
     border-radius: 7px;
+    color: #fff6fe;
 
 }
 
